styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
* {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
	font-family: 'Inter', sans-serif;
}

body {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 95vh;
	background: linear-gradient(to right, #25bbdd, #c471ed, #f34f5a);
}

/* Calculator body styles */
.calculator-body {
	padding: 5px;
	width: 220px;
	border-radius: 10px;
	background: #333;
	box-shadow: 2px 2px 5px 1px rgb(14, 13, 13);
}

.display {
	border: 1px solid black;
	text-align: right;
	padding: 0.5rem;
	margin: 0.25rem;
	border-radius: 10px;
	background: #222;
	color: white;
	user-select: none;
	box-shadow: 1px 1px 5px 0 rgb(14, 13, 13);
	height: 60px;
}

.top-display {
	opacity: 0.8;
	height: 40%;
	margin-bottom: 1px;
}

.bottom-display {
	font-size: 1.3rem;
	height: 60%;
	margin-top: 1px;
	overflow-x: hidden;
}

.buttons {
	display: grid;
	grid-template-columns: 1fr 1fr 1fr 1fr;
	margin-top: 0.5rem;
}

.buttons > button {
	margin: 0.25rem;
	border: none;
	border-radius: 50px;
	padding: 0.5rem;
	font-size: 1.1rem;
	transition: filter 100ms ease;
	box-shadow: 1px 1px 5px 0 rgb(14, 13, 13);
}

.buttons > .number {
	background: #222;
	color: #ccc;
}

.buttons > button:hover {
	filter: brightness(0.9);
}

.buttons > button:active {
	filter: brightness(0.7);
}

.extra {
	background: #4ca8ff;
}

.operator,
.equals {
	background: #007aff;
}

.span-2 {
	grid-column: 1 / span 2;
}

